--- a/index.html
+++ b/index.html
@@ -6,10 +6,43 @@
     <title>OBR Character Sheet</title>
     <link rel="stylesheet" href="OBR-CS.css">
 </head>
+
 <div class="holy-grail-grid">
     <header class="header">Header</header>
     <main class="main-content">Main content</main>
-    <section class="left-sidebar">Left sidebar</section>
+    <section class="left-sidebar">
+        <table class="table">
+            <tr>
+                <th>Ability</th>
+                <th>Score</th>
+            </tr>
+            <tr>
+                <td>STR</td>
+                <td><input type="number" placeholder="0" id="strScore"></td>
+            </tr>
+            <tr>
+                <td>DEX</td>
+                <td><input type="number" placeholder="0" id="dexScore"></td>
+            </tr>
+            <tr>
+                <td>CON</td>
+                <td><input type="number" placeholder="0" id="conScore"></td>
+            </tr>
+            <tr>
+                <td>INT</td>
+                <td><input type="number" placeholder="0" id="intScore"></td>
+            </tr>
+            <tr>
+                <td>WIS</td>
+                <td><input type="number" placeholder="0" id="wisScore"></td>
+            </tr>
+            <tr>
+                <td>CHA</td>
+                <td><input type="number" placeholder="0" id="chaScore"></td>
+
+            </tr>
+        </table>
+    </section>
     <aside class="right-sidebar">Right sidebar</aside>
     <footer class="footer">Footer</footer>
 </div>
