--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
             </tr>
             <tr>
                 <td>STR</td>
-                <td><input type="number" placeholder="0" id="strScore"></td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="strScore"></td>
             </tr>
             <tr>
                 <td>DEX</td>
-                <td><input type="number" placeholder="0" id="dexScore"></td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="dexScore"></td>
             </tr>
             <tr>
                 <td>CON</td>
-                <td><input type="number" placeholder="0" id="conScore"></td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="conScore"></td>
             </tr>
             <tr>
                 <td>INT</td>
-                <td><input type="number" placeholder="0" id="intScore"></td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="intScore"></td>
             </tr>
             <tr>
                 <td>WIS</td>
-                <td><input type="number" placeholder="0" id="wisScore"></td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="wisScore"></td>
             </tr>
             <tr>
                 <td>CHA</td>
-                <td><input type="number" placeholder="0" id="chaScore"></td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="chaScore"></td>
 
             </tr>
         </table>
