--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta charset="UTF-8" />
     <title>OBR Character Sheet</title>
     <link rel="stylesheet" href="OBR-CS.css">
-    <script defer src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
+
+<script>
+    window.onload = function () {
+        getStoredValues();
+    };
+</script>
+
 
 <div class="holy-grail-grid">
     <header class="header">Header</header>
