--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="holy-grail-grid">
     <header class="header">Header</header>
-    <main class="main-content">Main content</main>
+    <main class="main-content">Main Content</main>
     <section class="left-sidebar">
         <table class="table">
             <tr>
@@ -57,7 +57,7 @@
             </tr>
         </table>
     </section>
-    <aside class="right-sidebar">Right sidebar</aside>
+    <aside class="right-sidebar">Right Sidebar</aside>
     <footer class="footer">Footer</footer>
 </div>
 
