--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 
 
 <div class="holy-grail-grid">
-    <header class="header">Header</header>
+    <header class="header">Character Name</header>
     <main class="main-content">Main Content</main>
     <section class="left-sidebar">
         <table class="table">
             <tr>
-                <th>Ability</th>
-                <th>Score</th>
+                <th colspan="2">Ability Scores</th>
             </tr>
             <tr>
                 <td>STR</td>
