--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>OBR Character Sheet</title>
     <link rel="stylesheet" href="OBR-CS.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <script src="script.js" defer></script>
 </head>
 
@@ -21,35 +22,55 @@
     <section class="left-sidebar">
         <table class="table">
             <tr>
-                <th colspan="2">Ability Scores</th>
+                <th colspan="2">
+                    ABILITY SCORES
+                </th>
             </tr>
             <tr>
-                <td>STR</td>
+                <td>
+                    <i class="bi bi-dice-1"></i>
+                    &ensp; STR
+                </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="strScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
-                <td>DEX</td>
+                <td>
+                    <i class="bi bi-dice-2"></i>
+                    &ensp; DEX
+                </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="dexScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
-                <td>CON</td>
+                <td>
+                    <i class="bi bi-dice-3"></i>
+                    &ensp; CON
+                </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="conScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
-                <td>INT</td>
+                <td>
+                    <i class="bi bi-dice-4"></i>
+                    &ensp; INT
+                </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="intScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
-                <td>WIS</td>
+                <td>
+                    <i class="bi bi-dice-5"></i>
+                    &ensp; WIS
+                </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="wisScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
-                <td>CHA</td>
+                <td>
+                    <i class="bi bi-dice-6"></i>
+                    &ensp; CHA
+                </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="chaScore" onchange="setLocalStorage()">
                 </td>
 
