--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <tr>
                 <td>
                     <i class="bi bi-dice-1"></i>
-                    &ensp; STR
+                    &thinsp; STR
                 </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="strScore" onchange="setLocalStorage()">
                 </td>
@@ -37,7 +37,7 @@
             <tr>
                 <td>
                     <i class="bi bi-dice-2"></i>
-                    &ensp; DEX
+                    &thinsp; DEX
                 </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="dexScore" onchange="setLocalStorage()">
                 </td>
@@ -45,7 +45,7 @@
             <tr>
                 <td>
                     <i class="bi bi-dice-3"></i>
-                    &ensp; CON
+                    &thinsp; CON
                 </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="conScore" onchange="setLocalStorage()">
                 </td>
@@ -53,7 +53,7 @@
             <tr>
                 <td>
                     <i class="bi bi-dice-4"></i>
-                    &ensp; INT
+                    &thinsp; INT
                 </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="intScore" onchange="setLocalStorage()">
                 </td>
@@ -61,7 +61,7 @@
             <tr>
                 <td>
                     <i class="bi bi-dice-5"></i>
-                    &ensp; WIS
+                    &thinsp; WIS
                 </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="wisScore" onchange="setLocalStorage()">
                 </td>
@@ -69,7 +69,7 @@
             <tr>
                 <td>
                     <i class="bi bi-dice-6"></i>
-                    &ensp; CHA
+                    &thinsp; CHA
                 </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="chaScore" onchange="setLocalStorage()">
                 </td>
