--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <table class="table">
             <tr>
                 <th colspan="2">
-                    ABILITY SCORES
+                    <center>ABILITY SCORES</center>
                 </th>
             </tr>
             <tr>
@@ -45,7 +45,7 @@
             <tr>
                 <td>
                     <i class="bi bi-dice-3"></i>
-                    &thinsp; CON
+                    &thinsp; CON &thinsp;
                 </td>
                 <td><input type="number" placeholder="0" min="0" max="10" id="conScore" onchange="setLocalStorage()">
                 </td>
