--- a/index.html
+++ b/index.html
@@ -25,103 +25,93 @@
             <table>
                 <tbody>
                     <tr>
-                        <td><input type="checkbox" name="check-1" value="1" checked onchange="setLocalStorage()" checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-1" placeholder="Slot 1" size="30" checked
-                                onchange="setLocalStorage()"></td>
+                        <td><input type="checkbox" id="check-1" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-1" placeholder="Slot 1" size="30" onchange="setLocalStorage()">
+                        </td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-11" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-11" placeholder="Slot 11" size="30" checked
+                        <td><input type="checkbox" id="check-11" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-11" placeholder="Slot 11" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-2" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-2" placeholder="Slot 2" size="30" checked
-                                onchange="setLocalStorage()"></td>
+                        <td><input type="checkbox" id="check-2" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-2" placeholder="Slot 2" size="30" onchange="setLocalStorage()">
+                        </td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-12" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-12" placeholder="Slot 12" size="30" checked
+                        <td><input type="checkbox" id="check-12" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-12" placeholder="Slot 12" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-3" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-3" placeholder="Slot 3" size="30" checked
-                                onchange="setLocalStorage()"></td>
+                        <td><input type="checkbox" id="check-3" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-3" placeholder="Slot 3" size="30" onchange="setLocalStorage()">
+                        </td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-13" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-13" placeholder="Slot 13" size="30" checked
+                        <td><input type="checkbox" id="check-13" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-13" placeholder="Slot 13" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-4" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-4" placeholder="Slot 4" size="30" checked
-                                onchange="setLocalStorage()"></td>
+                        <td><input type="checkbox" id="check-4" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-4" placeholder="Slot 4" size="30" onchange="setLocalStorage()">
+                        </td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-14" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-14" placeholder="Slot 14" size="30" checked
+                        <td><input type="checkbox" id="check-14" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-14" placeholder="Slot 14" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-5" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-5" placeholder="Slot 5" size="30" checked
-                                onchange="setLocalStorage()"></td>
+                        <td><input type="checkbox" id="check-5" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-5" placeholder="Slot 5" size="30" onchange="setLocalStorage()">
+                        </td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-15" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-15" placeholder="Slot 15" size="30" checked
+                        <td><input type="checkbox" id="check-15" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-15" placeholder="Slot 15" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-6" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-6" placeholder="Slot 6" size="30" checked
-                                onchange="setLocalStorage()"></td>
+                        <td><input type="checkbox" id="check-6" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-6" placeholder="Slot 6" size="30" onchange="setLocalStorage()">
+                        </td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-16" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-16" placeholder="Slot 16" size="30" checked
+                        <td><input type="checkbox" id="check-16" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-16" placeholder="Slot 16" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-7" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-7" placeholder="Slot 7" size="30" checked
-                                onchange="setLocalStorage()"></td>
+                        <td><input type="checkbox" id="check-7" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-7" placeholder="Slot 7" size="30" onchange="setLocalStorage()">
+                        </td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-17" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-17" placeholder="Slot 17" size="30" checked
+                        <td><input type="checkbox" id="check-17" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-17" placeholder="Slot 17" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-8" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-8" placeholder="Slot 8" size="30" checked
-                                onchange="setLocalStorage()"></td>
+                        <td><input type="checkbox" id="check-8" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-8" placeholder="Slot 8" size="30" onchange="setLocalStorage()">
+                        </td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-18" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-18" placeholder="Slot 18" size="30" checked
+                        <td><input type="checkbox" id="check-18" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-18" placeholder="Slot 18" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-9" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-9" placeholder="Slot 9" size="30" checked
+                        <td><input type="checkbox" id="check-9" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-9" placeholder="Slot 9" size="30" checked
                                 onchange="setLocalStorage()"></td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-19" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-19" placeholder="Slot 19" size="30" checked
+                        <td><input type="checkbox" id="check-19" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-19" placeholder="Slot 19" size="30" checked
                                 onchange="setLocalStorage()"></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" name="check-10" value="1" checked checked
-                                onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-10" placeholder="Slot 10" size="30" checked
+                        <td><input type="checkbox" id="check-10" value="1" checked onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-10" placeholder="Slot 10" size="30"
                                 onchange="setLocalStorage()"></td>
                         <td> &emsp; </td>
-                        <td><input type="checkbox" name="check-20" value="1" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" name="slot-20" placeholder="Slot 20" size="30" checked
+                        <td><input type="checkbox" id="check-20" value="1" onchange="setLocalStorage()"></td>
+                        <td><input type="text" id="slot-20" placeholder="Slot 20" size="30"
                                 onchange="setLocalStorage()"></td>
                     </tr>
                 </tbody>
