--- a/index.html
+++ b/index.html
@@ -20,185 +20,171 @@
     <header class="header">Character Name</header>
 
     <main class="main-content">
-        <center>
-            <b>INVENTORY</b>
-            <table>
-                <tbody>
-                    <tr>
-                        <td><input type="checkbox" id="check-1" tabindex="21" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-1" placeholder="Slot 1" tabindex="1"
-                                onchange="setLocalStorage()">
-                        </td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-11" tabindex="31" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-11" placeholder="Slot 11" size="30" tabindex="11"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-2" tabindex="22" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-2" placeholder="Slot 2" tabindex="2"
-                                onchange="setLocalStorage()">
-                        </td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-12" tabindex="32" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-12" placeholder="Slot 12" tabindex="12"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-3" tabindex="23" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-3" placeholder="Slot 3" tabindex="3"
-                                onchange="setLocalStorage()">
-                        </td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-13" tabindex="33" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-13" placeholder="Slot 13" tabindex="13"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-4" tabindex="24" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-4" placeholder="Slot 4" tabindex="4"
-                                onchange="setLocalStorage()">
-                        </td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-14" tabindex="34" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-14" placeholder="Slot 14" tabindex="14"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-5" tabindex="25" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-5" placeholder="Slot 5" tabindex="5"
-                                onchange="setLocalStorage()">
-                        </td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-15" tabindex="35" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-15" placeholder="Slot 15" tabindex="15"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-6" tabindex="26" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-6" placeholder="Slot 6" tabindex="6"
-                                onchange="setLocalStorage()">
-                        </td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-16" tabindex="36" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-16" placeholder="Slot 16" tabindex="16"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-7" tabindex="27" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-7" placeholder="Slot 7" tabindex="7"
-                                onchange="setLocalStorage()">
-                        </td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-17" tabindex="37" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-17" placeholder="Slot 17" tabindex="17"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-8" tabindex="28" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-8" placeholder="Slot 8" tabindex="8"
-                                onchange="setLocalStorage()">
-                        </td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-18" tabindex="38" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-18" placeholder="Slot 18" tabindex="18"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-9" tabindex="29" checked onchange="setLocalStorage()"></td>
-                        <td><input type="text" id="slot-9" placeholder="Slot 9" tabindex="9" checked
-                                onchange="setLocalStorage()"></td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-19" tabindex="39" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-19" placeholder="Slot 19" tabindex="19" checked
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" id="check-10" tabindex="30" checked onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-10" placeholder="Slot 10" tabindex="10"
-                                onchange="setLocalStorage()"></td>
-                        <td> &emsp; </td>
-                        <td><input type="checkbox" id="check-20" tabindex="40" onchange="setLocalStorage()">
-                        </td>
-                        <td><input type="text" id="slot-20" placeholder="Slot 20" tabindex="20"
-                                onchange="setLocalStorage()"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </center>
+
+        <table>
+            <th colspan="5">INVENTORY</th>
+            <tr>
+                <td><input type="checkbox" id="check-1" tabindex="21" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-1" placeholder="Slot 1" tabindex="1" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-11" tabindex="31" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-11" placeholder="Slot 11" size="30" tabindex="11"
+                        onchange="setLocalStorage()"></td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-2" tabindex="22" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-2" placeholder="Slot 2" tabindex="2" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-12" tabindex="32" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-12" placeholder="Slot 12" tabindex="12" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-3" tabindex="23" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-3" placeholder="Slot 3" tabindex="3" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-13" tabindex="33" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-13" placeholder="Slot 13" tabindex="13" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-4" tabindex="24" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-4" placeholder="Slot 4" tabindex="4" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-14" tabindex="34" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-14" placeholder="Slot 14" tabindex="14" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-5" tabindex="25" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-5" placeholder="Slot 5" tabindex="5" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-15" tabindex="35" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-15" placeholder="Slot 15" tabindex="15" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-6" tabindex="26" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-6" placeholder="Slot 6" tabindex="6" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-16" tabindex="36" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-16" placeholder="Slot 16" tabindex="16" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-7" tabindex="27" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-7" placeholder="Slot 7" tabindex="7" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-17" tabindex="37" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-17" placeholder="Slot 17" tabindex="17" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-8" tabindex="28" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-8" placeholder="Slot 8" tabindex="8" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-18" tabindex="38" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-18" placeholder="Slot 18" tabindex="18" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-9" tabindex="29" checked onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-9" placeholder="Slot 9" tabindex="9" checked
+                        onchange="setLocalStorage()"></td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-19" tabindex="39" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-19" placeholder="Slot 19" tabindex="19" checked
+                        onchange="setLocalStorage()"></td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" id="check-10" tabindex="30" checked onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-10" placeholder="Slot 10" tabindex="10" onchange="setLocalStorage()">
+                </td>
+                <td> &emsp; </td>
+                <td><input type="checkbox" id="check-20" tabindex="40" onchange="setLocalStorage()">
+                </td>
+                <td><input type="text" id="slot-20" placeholder="Slot 20" tabindex="20" onchange="setLocalStorage()">
+                </td>
+            </tr>
+        </table>
     </main>
 
     <section class="left-sidebar">
-        <center>
-            <b>ABILITY SCORES</b>
-            <table class="table">
-                <tr>
-                    <td>
-                        <i class="bi bi-dice-1"></i>
-                        &thinsp; STR
-                    </td>
-                    <td><input type="number" placeholder="0" min="0" max="10" id="strScore"
-                            onchange="setLocalStorage()">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <i class="bi bi-dice-2"></i>
-                        &thinsp; DEX
-                    </td>
-                    <td><input type="number" placeholder="0" min="0" max="10" id="dexScore"
-                            onchange="setLocalStorage()">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <i class="bi bi-dice-3"></i>
-                        &thinsp; CON &thinsp;
-                    </td>
-                    <td><input type="number" placeholder="0" min="0" max="10" id="conScore"
-                            onchange="setLocalStorage()">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <i class="bi bi-dice-4"></i>
-                        &thinsp; INT
-                    </td>
-                    <td><input type="number" placeholder="0" min="0" max="10" id="intScore"
-                            onchange="setLocalStorage()">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <i class="bi bi-dice-5"></i>
-                        &thinsp; WIS
-                    </td>
-                    <td><input type="number" placeholder="0" min="0" max="10" id="wisScore"
-                            onchange="setLocalStorage()">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <i class="bi bi-dice-6"></i>
-                        &thinsp; CHA
-                    </td>
-                    <td><input type="number" placeholder="0" min="0" max="10" id="chaScore"
-                            onchange="setLocalStorage()">
-                    </td>
-
-                </tr>
-            </table>
-        </center>
+        <table class="table">
+            <th colspan="2"><b>ABILITY SCORES</b></th>
+            <tr>
+                <td>
+                    &thinsp;
+                    <i class="bi bi-dice-1"></i>
+                    &thinsp; STR
+                </td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="strScore" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    &thinsp;
+                    <i class="bi bi-dice-2"></i>
+                    &thinsp; DEX
+                </td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="dexScore" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    &thinsp;
+                    <i class="bi bi-dice-3"></i>
+                    &thinsp; CON
+                </td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="conScore" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    &thinsp;
+                    <i class="bi bi-dice-4"></i>
+                    &thinsp; INT
+                </td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="intScore" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    &thinsp;
+                    <i class="bi bi-dice-5"></i>
+                    &thinsp; WIS
+                </td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="wisScore" onchange="setLocalStorage()">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    &thinsp;
+                    <i class="bi bi-dice-6"></i>
+                    &thinsp; CHA
+                </td>
+                <td><input type="number" placeholder="0" min="0" max="10" id="chaScore" onchange="setLocalStorage()">
+                </td>
+            </tr>
+        </table>
     </section>
     <aside class="right-sidebar">
         <center><b>SIDEBAR</b></center>
