--- a/index.html
+++ b/index.html
@@ -114,13 +114,12 @@
             <tr>
                 <td><input type="checkbox" class="box" id="check-9" tabindex="29" checked onchange="setLocalStorage()">
                 </td>
-                <td><input type="text" id="slot-9" placeholder="Slot 9" tabindex="9" checked
-                        onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-9" placeholder="Slot 9" tabindex="9" onchange="setLocalStorage()"></td>
                 <td> &emsp; </td>
                 <td><input type="checkbox" class="box" id="check-19" tabindex="39" onchange="setLocalStorage()">
                 </td>
-                <td><input type="text" id="slot-19" placeholder="Slot 19" tabindex="19" checked
-                        onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-19" placeholder="Slot 19" tabindex="19" onchange="setLocalStorage()">
+                </td>
             </tr>
             <tr>
                 <td><input type="checkbox" class="box" id="check-10" tabindex="30" checked onchange="setLocalStorage()">
@@ -145,7 +144,7 @@
                     <i class="bi bi-dice-1"></i>
                     &thinsp; STR
                 </td>
-                <td><input type="number" placeholder="0" min="0" max="10" id="strScore" onchange="setLocalStorage()">
+                <td><input type="number" value="0" min="0" max="10" id="strScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -154,7 +153,7 @@
                     <i class="bi bi-dice-2"></i>
                     &thinsp; DEX
                 </td>
-                <td><input type="number" placeholder="0" min="0" max="10" id="dexScore" onchange="setLocalStorage()">
+                <td><input type="number" value="0" min="0" max="10" id="dexScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -163,7 +162,7 @@
                     <i class="bi bi-dice-3"></i>
                     &thinsp; CON
                 </td>
-                <td><input type="number" placeholder="0" min="0" max="10" id="conScore" onchange="setLocalStorage()">
+                <td><input type="number" value="0" min="0" max="10" id="conScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -172,7 +171,7 @@
                     <i class="bi bi-dice-4"></i>
                     &thinsp; INT
                 </td>
-                <td><input type="number" placeholder="0" min="0" max="10" id="intScore" onchange="setLocalStorage()">
+                <td><input type="number" value="0" min="0" max="10" id="intScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -181,7 +180,7 @@
                     <i class="bi bi-dice-5"></i>
                     &thinsp; WIS
                 </td>
-                <td><input type="number" placeholder="0" min="0" max="10" id="wisScore" onchange="setLocalStorage()">
+                <td><input type="number" value="0" min="0" max="10" id="wisScore" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -190,7 +189,7 @@
                     <i class="bi bi-dice-6"></i>
                     &thinsp; CHA
                 </td>
-                <td><input type="number" placeholder="0" min="0" max="10" id="chaScore" onchange="setLocalStorage()">
+                <td><input type="number" value="0" min="0" max="10" id="chaScore" onchange="setLocalStorage()">
                 </td>
             </tr>
         </table>
