--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <td> &emsp; </td>
                 <td><input type="checkbox" class="box" id="check-11" tabindex="31" onchange="setLocalStorage()">
                 </td>
-                <td><input type="text" id="slot-11" placeholder="Slot 11" size="30" tabindex="11"
-                        onchange="setLocalStorage()"></td>
+                <td><input type="text" id="slot-11" placeholder="Slot 11" tabindex="11" onchange="setLocalStorage()">
+                </td>
             </tr>
             <tr>
                 <td><input type="checkbox" class="box" id="check-2" tabindex="22" checked onchange="setLocalStorage()">
