--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
 
 
 <div class="holy-grail-grid">
-    <header class="header">Character Name</header>
+    <header class="header">
+        <name>
+            <h2>Character</h2>
+            <td><input type="text" id="charName" style="width: 90%;" placeholder="Character Name" tabindex="1"
+                    onchange="setLocalStorage()">
+        </name>
+        <logo>
+            <img src="/assets/knave-2e-logo.webp" alt="knave-2e-logo" height="63rem">
+        </logo>
+        <user>
+            <h2>Player</h2>
+            <td><input type="text" id="playerName" style="width: 90%;" placeholder="Player Name" tabindex="1"
+                    onchange="setLocalStorage()">
+        </user>
+    </header>
 
     <main class="main-content">
 
