--- a/index.html
+++ b/index.html
@@ -218,23 +218,35 @@
                 </tr>
                 <tr>
                     <td>XP</td>
-                    <td></td>
+                    <td><input type="text" id="xp" style="width: 4rem;" placeholder="XP" tabindex="1"
+                            onchange="setLocalStorage()"></td>
                 </tr>
                 <tr>
                     <td>Max HP</td>
-                    <td><input type="number" value="1" min="1" max="99" id="HP" onchange="setLocalStorage()"></td>
+                    <td><input type="number" value="1" min="1" max="99" id="maxHp" onchange="setLocalStorage()"></td>
                 </tr>
                 <tr>
                     <td>AC</td>
-                    <td><input type="number" value="0" min="0" max="10" id="AC" onchange="setLocalStorage()"></td>
+                    <td><input type="number" value="0" min="0" max="10" id="ac" onchange="setLocalStorage()"></td>
+                </tr>
+                <tr>
+                    <td>Speed</td>
+                    <td><input type="text" id="speed" style="width: 4rem;" placeholder="Speed" tabindex="1"
+                            onchange="setLocalStorage()"></td>
                 </tr>
                 <tr>
                     <td>Career 1</td>
-                    <td></td>
+                </tr>
+                <tr>
+                    <td colspan=2><input type="text" id="career1" placeholder="Career 1" tabindex="20"
+                            onchange="setLocalStorage()"></td>
                 </tr>
                 <tr>
                     <td>Career 2</td>
-                    <td></td>
+                </tr>
+                <tr>
+                    <td colspan=2><input type="text" id="career2" placeholder="Career 2" tabindex="20"
+                            onchange="setLocalStorage()"></td>
                 </tr>
             </table>
         </center>
