--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                 </tr>
                 <tr>
                     <td style="text-align: right;">XP &ensp;</td>
-                    <td><input type="text" id="xp" style="width: 4rem;" tabindex="52" onchange="setLocalStorage()"></td>
+                    <td><input type="text" id="xp" style="width: 2.5rem; text-align: center;"
+                            tabindex="52" onchange="setLocalStorage()"></td>
                 </tr>
                 <tr style="line-height: 0.7em;">
                     <td>&emsp;</td>
@@ -238,8 +239,8 @@
                 </tr>
                 <tr>
                     <td style="text-align: right;">Speed &ensp;</td>
-                    <td><input type="text" id="speed" style="width: 2.75rem;" tabindex="55"
-                            onchange="setLocalStorage()">
+                    <td><input type="text" id="speed" style="width: 2.5rem; text-align: center;"
+                            tabindex="55" onchange="setLocalStorage()">
                     </td>
                 </tr>
                 <tr style="line-height: 0.7em;">
