--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
 <div class="holy-grail-grid">
     <header class="header">
         <name>
-            <h2>Character</h2>
-            <td><input type="text" id="charName" style="width: 90%;" placeholder="Character Name" tabindex="1"
-                    onchange="setLocalStorage()">
+            <h2 style="text-align: center;">Character</h2>
+            <div align="center">
+                <input type="text" id="charName" style="width: 70%; text-align: center;" placeholder="Character Name"
+                    tabindex="1" onchange="setLocalStorage()">
+            </div>
         </name>
         <logo>
             <img src="/assets/knave-2e-logo.webp" alt="knave-2e-logo" height="63rem">
         </logo>
         <user>
-            <h2>Player</h2>
-            <td><input type="text" id="playerName" style="width: 90%;" placeholder="Player Name" tabindex="1"
-                    onchange="setLocalStorage()">
+            <h2 style="text-align: center;">Player</h2>
+            <div align="center"><input type="text" id="playerName" style="width: 70%; text-align: center;"
+                    placeholder="Player Name" tabindex="1" onchange="setLocalStorage()">
+            </div>
         </user>
     </header>
 
@@ -218,8 +221,8 @@
                 </tr>
                 <tr>
                     <td style="text-align: right;">XP &ensp;</td>
-                    <td><input type="text" id="xp" style="width: 2.5rem; text-align: center;"
-                            tabindex="52" onchange="setLocalStorage()"></td>
+                    <td><input type="text" id="xp" style="width: 2.5rem; text-align: center;" tabindex="52"
+                            onchange="setLocalStorage()"></td>
                 </tr>
                 <tr style="line-height: 0.7em;">
                     <td>&emsp;</td>
@@ -239,8 +242,8 @@
                 </tr>
                 <tr>
                     <td style="text-align: right;">Speed &ensp;</td>
-                    <td><input type="text" id="speed" style="width: 2.5rem; text-align: center;"
-                            tabindex="55" onchange="setLocalStorage()">
+                    <td><input type="text" id="speed" style="width: 2.5rem; text-align: center;" tabindex="55"
+                            onchange="setLocalStorage()">
                     </td>
                 </tr>
                 <tr style="line-height: 0.7em;">
